# python-project-83

./: .gitignore  Makefile  README.md  database.sql  nixpacks.toml  pyproject.toml  requirements.txt
.github/workflows/: my-check.yml
page_analyzer/: __init__.py  app.py  db.py  utils.py  validator.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html
page_analyzer/templates/urls/: urls.html  urls_check.html  urls_detail.html  urls_form.html  urls_list.html
