[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "\"Hexlet`s python project 'Pages analizator'\""
authors = ["ibrg <romanbezh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
